Resolves: tdf#106729 MultiSelection is stored as a sal_Bool

not a bool, so broken since...

commit 432e3162e6cf4e90137699d45934b5db56a89aaf
Date:   Fri Oct 14 16:55:19 2016 +0200

    clang-cl loplugin: fpicker

Change-Id: I396855aa5ae9ac6f6b1b4b05736ffde3f788d640